--- a/main.kv
+++ b/main.kv
@@ -9,6 +9,30 @@
         MDScrollView:
             MDList:
                 id: chat_list
+        MDRelativeLayout:
+            pos_hint: {"center_x": .5}
+            md_bg_color: (.8, .8, .8)
+            size_hint_y: None
+            size_hint_x: None
+            width: 250
+            height: 50
+            radius: 25
+            MDLabel:
+                halign: "center"
+                text: "Drop to the right"
+            MDDraggable:
+                elevation: 0
+                icon: "arrow-right"
+                md_bg_color: app.theme_cls.primary_color
+                x: self.width
+    MDFloatingActionButton:
+        elevation: 0
+        icon: "camera"
+        pos: self.parent.width-self.width-20, 20
+        md_bg_color: app.theme_cls.primary_color
+        on_release:
+            self.elevation = 0
+            app.screen_manager.current = "call"
 
 <ChatScreen>:
     on_pre_enter: title_bar.title = self.chatter
@@ -127,6 +151,15 @@
                             pos: self.parent.width-self.width, 0
                             on_release: app.check_infos(username.text, password.text, username, password)
 
+<VideoVoiceCallScreen>:
+    MDBoxLayout:
+        orientation: "vertical"
+        MDTopAppBar:
+            title: "Video Voice Call"
+            left_action_items: [["arrow-left", lambda x: app.chat_screen.back(app.screen_manager)]]
+        MDCamera:
+            id: camera
+
 <YourMessage>:
     size_hint_y: None
     height: c.height
@@ -188,3 +221,22 @@
     on_release: app.chat_with(self.text)
     IconLeftWidget:
         icon: "account"
+
+<MDCamera@MDScreen>:
+    play: True
+    Camera:
+        id: c
+        play: root.play
+    MDFloatingActionButton:
+        elevation: 0
+        icon: "camera"
+        md_bg_color: app.theme_cls.primary_color
+        pos: 10, 10
+        on_release:
+            self.elevation = 0
+            c.play = not c.play
+
+<MDDraggable@DragBehavior+MDIconButton>:
+    drag_timeout: 10000000
+    drag_distance: 0
+    drag_rectangle: ((self.parent.parent.parent.width-250)/2), (self.parent.parent.parent.height-50), 250, 50
